# dotdict

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
dotdict/: __init__.py  core.py
tests/: test_dotdict.py
